# Trace2d

./: .gitignore  CMakeLists.txt  gencmake.sh
glade/: traceUI.glade
src/: BitmapImageArea.cpp  BitmapImageArea.h  CMakeLists.txt  ImageTracer.cpp  ImageTracer.h  VectorImageArea.cpp  VectorImageArea.h  VectorShape.cpp  VectorShape.h  colormapper.cpp  colormapper.h  imageArea.cpp  imageArea.h  itk2graphicsscene.cpp  itk2graphicsscene.h  itkimagetypes.h  labelSelectorPixelAccessor.cpp  labelSelectorPixelAccessor.h  main.cpp  trace.cpp  trace.h  tracewindow.cpp  tracewindow.h  watershed.cpp  watershed.cpp.h  watershed.h
src/ui/: trace2d.ui
